dropshot/tests/fail/bad_endpoint10.stderr
error[E0271]: type mismatch resolving `<String as TypeEq>::This == HttpError`
  --> tests/fail/bad_endpoint10.rs:16:6
   |
16 | ) -> Result<HttpResponseOk<()>, String> {
   |      ^^^^^^
   |      |
   |      expected this to be `HttpError`
   |      type mismatch resolving `<String as TypeEq>::This == HttpError`
   |
note: required by a bound in `validate_result_error_type`
  --> tests/fail/bad_endpoint10.rs:16:6
   |
16 | ) -> Result<HttpResponseOk<()>, String> {
   |      ^^^^^^ required by this bound in `validate_result_error_type`

error[E0277]: the trait bound `fn(Arc<RequestContext<()>>) -> impl Future<Output = Result<HttpResponseOk<()>, String>> {<impl From<bad_error_type> for ApiEndpoint<<Arc<RequestContext<()>> as RequestContextArgument>::Context>>::from::bad_error_type}: dropshot::handler::HttpHandlerFunc<_, _, _>` is not satisfied
  --> tests/fail/bad_endpoint10.rs:10:1
   |
10 | / #[endpoint {
11 | |     method = GET,
12 | |     path = "/test",
13 | | }]
   | |__^ the trait `dropshot::handler::HttpHandlerFunc<_, _, _>` is not implemented for `fn(Arc<RequestContext<()>>) -> impl Future<Output = Result<HttpResponseOk<()>, String>> {<impl From<bad_error_type> for ApiEndpoint<<Arc<RequestContext<()>> as RequestContextArgument>::Context>>::from::bad_error_type}`
   |
note: required by a bound in `ApiEndpoint::<Context>::new`
  --> src/api_description.rs
   |
   |         HandlerType: HttpHandlerFunc<Context, FuncParams, ResponseType>,
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ApiEndpoint::<Context>::new`
   = note: this error originates in the attribute macro `endpoint` (in Nightly builds, run with -Z macro-backtrace for more info)
